arreglo de rutas prueba

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="CSS/style.css" />
-    <link rel="icon" href="/img/logo_fondo_blanco_ADM.jpg" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="img/logo_fondo_blanco_ADM.jpg" />
   </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
@@ -141,7 +141,7 @@
           <article class="col-12 col-md-6 col-lg-3 d-flex">
             <div class="card mx-auto mb-3" style="width: 18rem">
               <img
-                src="img/icon-sites.png"
+                src="/img/icon-sites.png"
                 class="card-img-top bg-third-color"
                 alt="Nuevo sitio web"
               />
