arreglo rutas solucionado

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="/img/logo_transparente_ADM.png" alt="Alpha Digital Media" />
+          <img src="img/logo_transparente_ADM.png" alt="Alpha Digital Media" />
         </a>
         <button
           class="navbar-toggler border-0"
@@ -76,15 +76,15 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/views/galeria.html">Galeria</a>
+              <a class="nav-link" href="views/galeria.html">Galeria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/views/presupuestos.html"
+              <a class="nav-link" href="views/presupuestos.html"
                 >Presupuestos</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/views/contacto.html">Contacto</a>
+              <a class="nav-link" href="views/contacto.html">Contacto</a>
             </li>
           </ul>
         </div>
@@ -141,7 +141,7 @@
           <article class="col-12 col-md-6 col-lg-3 d-flex">
             <div class="card mx-auto mb-3" style="width: 18rem">
               <img
-                src="/img/icon-sites.png"
+                src="img/icon-sites.png"
                 class="card-img-top bg-third-color"
                 alt="Nuevo sitio web"
               />
@@ -151,7 +151,7 @@
                   ¿Necesitas un sitio web? calcula tu presupuesto segun tus
                   nececidades.
                 </p>
-                <a href="/views/presupuestos.html" class="text-third">
+                <a href="views/presupuestos.html" class="text-third">
                   Más detalles
                   <i class="bi bi-chevron-right"></i>
                 </a>
@@ -170,7 +170,7 @@
                 <p class="card-text">
                   Conoce algunos de nuestros proyectos realizados.
                 </p>
-                <a href="/views/galeria.html" class="text-third">
+                <a href="views/galeria.html" class="text-third">
                   Más detalles
                   <i class="bi bi-chevron-right"></i>
                 </a>
@@ -190,7 +190,7 @@
                   Visita nuestras instalaciones, vamos a conocernos y
                   escucharte.
                 </p>
-                <a href="/views/contacto.html" class="text-third">
+                <a href="views/contacto.html" class="text-third">
                   Más detalles
                   <i class="bi bi-chevron-right"></i>
                 </a>
@@ -248,7 +248,7 @@
           <div class="col-12 col-lg-6">
             <p class="text-white">
               Direccion: Calle D` Aaron Vidal Lopez, 46026, valencia.
-              <a href="/views/contacto.html"> Encuentranos</a>
+              <a href="views/contacto.html"> Encuentranos</a>
             </p>
           </div>
           <div class="col-12 col-lg-6">
@@ -265,6 +265,6 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
