--- a/index.html
+++ b/index.html
@@ -65,17 +65,23 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="sitios.html#ultimos-proyectos"
+                  <a
+                    class="dropdown-item"
+                    href="../views/galeria.html#proyectos"
                     >Últimos Proyectos</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="sitios.html#single-page"
+                  <a
+                    class="dropdown-item"
+                    href="../views/galeria.html#singlepage"
                     >Sitio <i>Single Page</i></a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="sitios.html#multi-page"
+                  <a
+                    class="dropdown-item"
+                    href="../views/galeria.html#multipage"
                     >Sitio <i>Multi Page</i></a
                   >
                 </li>
