--- a/index.html
+++ b/index.html
@@ -65,23 +65,19 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="../views/galeria.html#proyectos"
+                  <a class="dropdown-item" href="views/galeria.html#proyectos"
                     >Últimos Proyectos</a
                   >
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="../views/galeria.html#singlepage"
+                  <a class="dropdown-item" href="views/galeria.html#singlepage"
                     >Sitio <i>Single Page</i></a
                   >
                 </li>
                 <li>
                   <a
                     class="dropdown-item"
-                    href="../views/galeria.html#multipage"
+                    href="views/galeria.html#multipage"
                     >Sitio <i>Multi Page</i></a
                   >
                 </li>
@@ -687,7 +683,7 @@
         <div class="row pt-4">
           <div class="col-12 col-lg-6">
             <p class="text-white">
-              Direccion: Calle D` Aaron Vidal Lopez, 46026, valencia.
+              Direccion: Calle andarella 1, 46014, valencia.
               <a href="views/contacto.html"> Encuentranos</a>
             </p>
           </div>
